--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "phpingguo/citron-di",
+    "name": "phpeel/citron-di",
     "description": "Dependency injection container library wrapper.",
     "license": "MIT",
     "keywords": [
@@ -8,11 +8,11 @@
         "dependency injection",
         "dependency injection container"
     ],
-    "homepage": "https://github.com/phpingguo/citron-di",
+    "homepage": "https://github.com/phpeel/citron-di",
     "authors": [
         {
             "name" : "Citron DI Contributors",
-            "homepage": "https://github.com/phpingguo/citron-di/contributors"
+            "homepage": "https://github.com/phpeel/citron-di/contributors"
         }
     ],
     "require": {
@@ -26,8 +26,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Phpingguo\\CitronDI\\": "src/",
-            "Phpingguo\\CitronDI\\Tests\\": "tests/src/"
+            "Phpeel\\CitronDI\\": "src/",
+            "Phpeel\\CitronDI\\Tests\\": "tests/src/"
         }
     }
 }
